# statisticsthing

./: .gitignore  CMakeLists.txt  Makefile  README.md  classes.cpp  classes.h  main.cpp  readdata.cpp  readdata.h
